fixed countdown on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -68,10 +68,6 @@ p {
 	1px 1px 0 #fff;
 }
 
-#topNav a:hover {
-	border-bottom: 1.5px solid white;
-}
-
 #topNav li {
 	display: inline-block;
 	margin: 0 10px;
@@ -279,20 +275,19 @@ footer a:hover {
 
 /* Countdown */
 
-#daysUntil {
-  width: 100%;
+.countdown2 {
+  text-align: center;
+	display: flex;
+	justify-content: center;
 }
 
-#app {
-    align-items: center;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
+.countdown2 .timeel {
+  padding: 10px;
+}
+.countdown2 span[class*="timeRef"] {
+  color: black;
 }
 
-.countdown {
-  display: flex;
-}
 
 .block {
     display: flex;
@@ -318,6 +313,7 @@ footer a:hover {
     margin: 10px;
     text-align: center;
 }
+
 
 
 /* FOR Phones */
@@ -397,9 +393,13 @@ footer a:hover {
 		display: inline-block;
 	}
 
-	@media screen and (max-width: 500px) {
-		.countdown {
-			display: inline-block;
+	@media screen and (max-width: 550px) {
+		.countdown2 {
+			display: block;
+		}
+
+		.countdown2 .timeel {
+			display: block;
 		}
 	}
 }
